Fix navbars on small screens

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -60,10 +60,9 @@ ul {
     @apply bg-gray-500;
 }
 
-.animated-link:hover:after {
-    width: 100%;
-}
-
+// .animated-link:hover:after {
+//     width: 100%;
+// }
 .height-30px {
     height: 30px;
 }
